# Evice-Blockchain-Aegis

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  start_testnet.sh
.cargo/: config.toml
contracts/bridge_contract/: Cargo.toml
contracts/erc721/: Cargo.toml
evice-contract-sdk/: Cargo.toml
evice-core/: Cargo.toml
evice_blockchain/: Cargo.toml
