[package]
name = "evice-contract-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
evice-core = { path = "../evice-core" }
ark-std = { workspace = true }
spin = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }

[features]
# Aktifkan fitur ini saat mengkompilasi kontrak untuk deployment ke blockchain.
# Jika tidak diaktifkan, kontrak akan menggunakan penyimpanan in-memory untuk pengujian.
on-chain = []